# OCRParking

./: .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  dev.env  docker-compose.yml  insert_users.sql  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: docker-image.yml
admin/: routes.py
auth/: auth.py  routes.py
cameras/: routes.py  utils.py
db_models/: db.py  init_db.py  init_db_orm.py  models.py  orms.py  settings.py
docs/source/: conf.py  index.rst  installation.rst  intro.rst
frontend/: routes.py
frontend/static/: index.html  styles.css  user.html
frontend/templates/: about.html  admin.html  base.html  index.html  lots.html
frontend/templates/admin/: _last_tariff.html  active_users_stats.html  add_user_form.html  admin.html  admin_base.html  available_spots_stats.html  average_parking_duration_stats.html  ban_success.html  banned_users_list.html  banned_users_stats.html  blacklist_management.html  car_selection.html  car_stats.html  logout_success.html  max_cars_day_stats.html  mistake.html  parking_count_stats.html  parking_occupancy_stats.html  parking_stats.html  peak_activity_time_stats.html  set_tariff_success.html  stats_management.html  tariff_added.html  tariff_management.html  unban_success.html  unban_user_form.html  user_added.html  user_deleted.html  user_list.html  user_management.html  user_selection.html  user_stats.html
frontend/templates/auth/: login_form.html  register_form.html  registration_success.html
frontend/templates/cameras/: cameras.html  turnpike_down.html  turnpike_up.html
frontend/templates/user/: add_car_form.html  bill_list.html  bill_payment.html  car_bills.html  car_deleted.html  car_list.html  car_parkings.html  delete_car_form.html  message_list.html  user.html
migrations/: env.py
migrations/Scripts/: cars_202409121354.sql  cars_202409121406.sql  users_202409121353.sql
migrations/versions/: 2024_09_10_10-f6ef0ba5adf6_init.py  2024_09_10_13-88a0e152c4cb_init.py  2024_09_13_09-ad4e5a9091bf_added_messages_table.py  2024_09_13_11-542fb9150889_added_tariffs_and_creditlimits_tables.py  2024_09_14_14-a91189dc6f54_added_is_ban_column_to_messages.py  2024_09_14_16-22c9b2a76e20_added_is_ban_column_to_billing.py  2024_09_16_21-26ea38088c96_added_parking_lots.py
ocr_ml/: plate_recognition.py
routes/: auth.py  auth_routes.py
schemas/: auth.py  cars.py
user/: routes.py
