[tool.poetry]
name = "ocrparking"
version = "0.1.0"
description = "Automated parking billing system powered by computer vision (car license plate recognition)"
authors = ["Dmytro Tarasenko <ug.dotenko@gmail.com>",
    "Sergiy Chabanchuk <chabanchuk@gmail.com>",
    "Maksym Melnyk <maks.melnyk.94@gmail.com>",
    "Angelika Kodlubovska <kodanzelika@gmail.com>",
]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"
pyjwt = "^2.9.0"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
bcrypt = "^4.2.0"
opencv-python = "^4.10.0.84"
torch = "2.0.1"
torchvision = "0.15.2"
pytesseract = "^0.3.13"
pandas = "^2.2.2"
requests = "^2.32.3"
sqlalchemy = "^2.0.35"
fastapi = "^0.115.0"
python-jose = "^3.3.0"
numpy = "^2.1.1"
pydantic = "^2.9.2"
easyocr = "^1.7.1"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
