[tool.poetry]
name = "ocrparking"
version = "0.1.0"
description = ""
authors = ["Dmytro Tarasenko <ug.dotenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
alembic = "^1.13.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
python-jose = "^3.3.0"
bcrypt = "^4.2.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
numpy = "^2.1.1"
sqlalchemy = "^2.0.35"
torch = "^2.4.1"
easyocr = "^1.7.1"
opencv-python = "^4.10.0.84"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
pandas = "^2.2.2"
requests = "^2.32.3"
sqlalchemy-utils = "^0.41.2"
pyopenssl = "^24.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
